--- a/app/src/main/res/layout/activity_administrate.xml
+++ b/app/src/main/res/layout/activity_administrate.xml
@@ -48,7 +48,7 @@
         app:layout_constraintTop_toBottomOf="@+id/createhallbutton" />
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/deletehall"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="50dp"
