--- a/app/src/main/res/layout/activity_delete_hall.xml
+++ b/app/src/main/res/layout/activity_delete_hall.xml
@@ -6,19 +6,16 @@
     android:layout_height="match_parent"
     tools:context="eamv.dmu17he.lancrewapp.activities.DeleteHall">
 
-    <TextView
-        android:id="@+id/deletehall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Spinner
+        android:id="@+id/spinnerdeletehall"
+        android:layout_width="233dp"
+        android:layout_height="42dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="Choose hall to delete"
-        android:textSize="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/deleteaccept"
