--- a/app/src/main/res/layout/activity_edit_hall.xml
+++ b/app/src/main/res/layout/activity_edit_hall.xml
@@ -7,7 +7,7 @@
     tools:context="eamv.dmu17he.lancrewapp.activities.EditHallActivity">
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/edithalltitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -24,15 +24,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="60dp"
+        android:background="@drawable/border_style"
         android:ems="10"
         android:hint="Hall name"
-        android:background="@drawable/border_style"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/hallnamelist"
         tools:text="Hall name" />
 
     <EditText
@@ -68,7 +68,7 @@
         tools:text="Number of columns" />
 
     <Button
-        android:id="@+id/savechangebutton"
+        android:id="@+id/savechangesbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -82,4 +82,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editnumberofcolumns"
         app:layout_constraintVertical_bias="0.509" />
+
+    <Spinner
+        android:id="@+id/hallnamelist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edithalltitle" />
 </android.support.constraint.ConstraintLayout>
