--- a/app/src/main/res/layout/activity_book_awake_up.xml
+++ b/app/src/main/res/layout/activity_book_awake_up.xml
@@ -7,7 +7,7 @@
     tools:context="eamv.dmu17he.lancrewapp.activities.BookAWakeUpActivity">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/titletextview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -20,30 +20,30 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:id="@+id/spinner"
+        android:id="@+id/timespinner"
         android:layout_width="233dp"
-        android:layout_height="42dp"
-        android:layout_marginBottom="372dp"
-        android:layout_marginEnd="40dp"
+        android:layout_height="43dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginTop="40dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/commettextfield"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/titletextview"
+        app:layout_constraintVertical_bias="0.733" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/timetextview"
         android:layout_width="85dp"
         android:layout_height="42dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="120dp"
         android:text="Time:"
         android:textSize="30dp"
-        app:layout_constraintEnd_toStartOf="@+id/spinner"
-        app:layout_constraintHorizontal_bias="0.571"
+        app:layout_constraintEnd_toStartOf="@+id/timespinner"
+        app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/titletextview" />
 
     <EditText
         android:id="@+id/commettextfield"
@@ -99,5 +99,38 @@
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Spinner
+        android:id="@+id/pickhallspinner"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/titletextview" />
+
+    <Spinner
+        android:id="@+id/pickcolumnspinner"
+        android:layout_width="170dp"
+        android:layout_height="26dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toStartOf="@+id/pickrowspinner"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pickhallspinner" />
+
+    <Spinner
+        android:id="@+id/pickrowspinner"
+        android:layout_width="170dp"
+        android:layout_height="26dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/pickhallspinner" />
 
 </android.support.constraint.ConstraintLayout>
