--- a/app/src/main/res/layout/activity_administrate.xml
+++ b/app/src/main/res/layout/activity_administrate.xml
@@ -41,7 +41,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/roundedbutton"
-        android:text="Edit Hall"
+        android:text="Edit/Delete Hall"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
