--- a/app/src/main/res/layout/activity_create_hall.xml
+++ b/app/src/main/res/layout/activity_create_hall.xml
@@ -57,7 +57,7 @@
         android:layout_marginBottom="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Create"
+        android:text="@string/create"
         android:background="@drawable/roundedbutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
