--- a/app/src/main/res/layout/activity_start_wake_up.xml
+++ b/app/src/main/res/layout/activity_start_wake_up.xml
@@ -13,7 +13,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="80dp"
-        android:text="Book WakeUp"
+        android:text="@string/bookwakeup"
         android:background="@drawable/roundedbutton"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -29,7 +29,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="60dp"
-        android:text="Bookings Overview"
+        android:text="@string/booking_overview"
         android:background="@drawable/roundedbutton"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -44,7 +44,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="60dp"
-        android:text="Administrate"
+        android:text="@string/administrate"
         android:background="@drawable/roundedbutton"
         android:textSize="20sp"
         android:textStyle="bold"
