--- a/app/src/main/res/layout/activity_edit_or_delete_hall.xml
+++ b/app/src/main/res/layout/activity_edit_or_delete_hall.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="eamv.dmu17he.lancrewapp.activities.EditHallActivity">
+    tools:context="eamv.dmu17he.lancrewapp.activities.EditOrDeleteHallActivity">
 
     <TextView
         android:id="@+id/edithalltitle"
@@ -75,14 +75,15 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="@string/save_changes"
         android:background="@drawable/roundedbutton"
+        android:text="@string/save_changes"
+        android:onClick="saveChanges"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.145"
+        app:layout_constraintHorizontal_bias="0.211"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editnumberofcolumns"
-        app:layout_constraintVertical_bias="0.509" />
+        app:layout_constraintVertical_bias="0.782" />
 
     <Spinner
         android:id="@+id/hallnamelist"
@@ -100,7 +101,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -108,16 +108,17 @@
         android:id="@+id/buttondelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="68dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/roundedbutton"
         android:text="@string/delete"
+        android:onClick="deleteHall"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintHorizontal_bias="0.486"
         app:layout_constraintStart_toEndOf="@+id/savechangesbutton"
         app:layout_constraintTop_toBottomOf="@+id/editnumberofcolumns"
-        app:layout_constraintVertical_bias="0.984" />
+        app:layout_constraintVertical_bias="0.782" />
 </android.support.constraint.ConstraintLayout>
