--- a/app/src/main/res/layout/activity_delete_wake_up.xml
+++ b/app/src/main/res/layout/activity_delete_wake_up.xml
@@ -4,121 +4,116 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="eamv.dmu17he.lancrewapp.activities.EditOrDeleteHallActivity">
+    tools:context="eamv.dmu17he.lancrewapp.activities.DeleteWakeUpActivity">
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="368dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
 
     <TextView
-        android:id="@+id/edithalltitle"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/edit_or_deletehall"
+        android:layout_marginTop="16dp"
+        android:text="@string/delete_wakeup"
         android:textSize="35dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.402"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <TextView
         android:id="@+id/displayhall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="24dp"
         android:background="@drawable/border_style"
         android:ems="10"
-        android:hint="@string/Hall_name"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/hallnamelist"
-        tools:text="Hall name" />
+        app:layout_constraintTop_toBottomOf="@+id/displaytime"
+        tools:text="Hall" />
 
-    <EditText
+    <TextView
         android:id="@+id/displayrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="@string/Number_of_rows"
         android:background="@drawable/border_style"
+        android:ems="10"
+        android:hint="@string/row"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/displayhall"
-        tools:text="Number of rows" />
+        tools:text="Row" />
 
-    <EditText
-        android:id="@+id/editnumberofcolumns"
+    <TextView
+        android:id="@+id/displaycolumn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="24dp"
-        android:ems="10"
-        android:hint="@string/Number_of_columns"
         android:background="@drawable/border_style"
+        android:ems="10"
+        android:hint="@string/row"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/displayrow"
-        tools:text="Number of columns" />
+        tools:text="Column" />
 
     <Button
-        android:id="@+id/savechangesbutton"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:text="@string/delete"
         android:background="@drawable/roundedbutton"
-        android:text="@string/save_changes"
-        android:onClick="saveChanges"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.211"
+        app:layout_constraintHorizontal_bias="0.092"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editnumberofcolumns"
-        app:layout_constraintVertical_bias="0.782" />
+        app:layout_constraintTop_toBottomOf="@+id/displaycolumn"
+        app:layout_constraintVertical_bias="0.683" />
 
-    <Spinner
-        android:id="@+id/hallnamelist"
+    <TextView
+        android:id="@+id/displaytime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="56dp"
+        android:background="@drawable/border_style"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edithalltitle" />
+        app:layout_constraintTop_toBottomOf="@+id/spinner"
+        tools:text="Time" />
 
     <ProgressBar
         android:id="@+id/loadingProgressBar"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/buttondelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@drawable/roundedbutton"
-        android:text="@string/delete"
-        android:onClick="deleteHall"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.486"
-        app:layout_constraintStart_toEndOf="@+id/savechangesbutton"
-        app:layout_constraintTop_toBottomOf="@+id/editnumberofcolumns"
-        app:layout_constraintVertical_bias="0.782" />
 </android.support.constraint.ConstraintLayout>
