--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nestedScrollView"
-    android:background="@color/colorBackground"
+    android:background="@drawable/button_rounded_corners"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="eamv.dmu17he.lancrewapp.activities.LoginActivity">
