--- a/app/src/main/res/layout/activity_create_schedule.xml
+++ b/app/src/main/res/layout/activity_create_schedule.xml
@@ -41,10 +41,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#000"
         android:ems="10"
         android:hint="YYYY-MM-DD"
-        android:backgroundTint="#000"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/dateTV"
@@ -56,10 +56,10 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:text="Date :"
-        android:textSize="26dp"
         android:textColor="#000"
+        android:textSize="26dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.03"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,9 +70,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="22dp"
-        android:ems="10"
+        android:layout_marginTop="16dp"
         android:backgroundTint="#000"
+        android:ems="10"
         android:hint="HH:MM:SS"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
@@ -84,10 +84,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:text="StartTime :"
-        android:textSize="26dp"
         android:textColor="#000"
+        android:textSize="26dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dateTV" />
 
@@ -96,10 +96,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#000"
         android:ems="10"
         android:hint="HH:MM:SS"
-        android:backgroundTint="#000"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/endTimeTV"
@@ -110,10 +110,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:text="EndTime :"
-        android:textSize="26dp"
         android:textColor="#000"
+        android:textSize="26dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/startTimeTV" />
 
@@ -121,23 +121,25 @@
         android:id="@+id/nickNameTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:text="Nickname :"
-        android:textSize="26dp"
         android:textColor="#000"
+        android:textSize="26dp"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/endTimeTV" />
+        app:layout_constraintTop_toBottomOf="@+id/crewTV" />
 
     <TextView
         android:id="@+id/gaNickTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:text="GA-Nick :"
-        android:textSize="26dp"
         android:textColor="#000"
+        android:textSize="26dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nickNameTV" />
 
@@ -146,13 +148,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:backgroundTint="#000"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/gaNickTV"
-        app:layout_constraintTop_toBottomOf="@+id/nickNameET" />
+        tools:layout_editor_absoluteY="407dp" />
 
     <Button
         android:id="@+id/saveSchedule"
@@ -185,16 +186,41 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/nickNameET"
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/crewTV"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="25dp"
+        android:text="Crew :"
+        android:textColor="#000"
+        android:textSize="26dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/endTimeTV" />
+
+    <Spinner
+        android:id="@+id/crewSpinner"
+        android:layout_width="306dp"
+        android:layout_height="37dp"
         android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
+        android:layout_marginTop="15dp"
+        android:spinnerMode="dropdown"
+        android:background="@android:drawable/btn_dropdown"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/nickNameTV"
+        app:layout_constraintStart_toEndOf="@+id/crewTV"
         app:layout_constraintTop_toBottomOf="@+id/endTimeET" />
+
+    <Spinner
+        android:id="@+id/userSpinner"
+        android:layout_width="251dp"
+        android:layout_height="37dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="28dp"
+        android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/nickNameTV"
+        app:layout_constraintTop_toBottomOf="@+id/crewSpinner" />
 </android.support.constraint.ConstraintLayout>
