--- a/app/src/main/res/layout/activity_create_schedule.xml
+++ b/app/src/main/res/layout/activity_create_schedule.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/allexceptmenu_background"
@@ -148,12 +149,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="#000"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/gaNickTV"
-        tools:layout_editor_absoluteY="407dp" />
+        app:layout_constraintTop_toBottomOf="@+id/userSpinner" />
 
     <Button
         android:id="@+id/saveSchedule"
@@ -205,12 +207,12 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="15dp"
-        android:spinnerMode="dropdown"
         android:background="@android:drawable/btn_dropdown"
+        android:spinnerMode="dropdown"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/crewTV"
         app:layout_constraintTop_toBottomOf="@+id/endTimeET" />
-    
+
     <Spinner
         android:id="@+id/userSpinner"
         android:layout_width="251dp"
